# Pricing-Library

./: .gitignore  CMakeLists.txt  README.md
include/private/project/: Api.hpp  AuctionHouse.hpp  Clipboard.h  Conversions.h  File.hpp  Log.h  Parse.hpp  Program.hpp  Time.hpp
include/private/templates/: LogTemplates.cpp
include/public/: Item.hpp  Pricing.h
lib/: .gitkeep
src/: Api.cpp  AuctionHouse.cpp  Clipboard.cpp  Conversions.cpp  File.cpp  Item.cpp  Log.cpp  Parse.cpp  Pricing.cpp  Program.cpp  ProgramUtilities.cpp  Time.cpp  main.cpp
